# essential

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
notebooks/: marginal_script.py  ode_experiment.sh  ode_script.py
src/essential/: baselines.py  ode.py  utils.py
src/essential/models/: __init__.py  base_model.py  dynamic_cellbox.py  dynamic_hardmultiplicative.py  dynamic_multiplicative.py  multiplicative_knockdown.py  multiplicative_knockdown_with_basal.py  steady_state_decay.py  steady_state_forcing.py
tests/: test_ode.py
